force-app/main/default/objects/IndianRealEstateRecords__c/IndianRealEstateRecords__c.object-meta.xml
<CustomObject>
    <label>IndianRealEstateRecord</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IndianRealEstateRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>