force-app/main/default/objects/IndianRealEstateRecords__c/fields/Average_Home_Price_in_India_INR__c.field-meta.xml
<CustomField>
    <fullName>Average_Home_Price_in_India_INR__c</fullName>
    <label>Average Home Price in India (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>