force-app/main/default/objects/IndianRealEstateRecords__c/fields/Nearby_Shopping_Center__c.field-meta.xml
<CustomField>
    <fullName>Nearby_Shopping_Center__c</fullName>
    <label>Nearby Shopping Center</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>