force-app/main/default/objects/IndianRealEstateRecords__c/fields/Public_Transport_Available__c.field-meta.xml
<CustomField>
    <fullName>Public_Transport_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Transport Available</label>
    <type>Checkbox</type>
</CustomField>