force-app/main/default/objects/IndianRealEstateRecords__c/fields/SafeCrime_Rating__c.field-meta.xml
<CustomField>
    <fullName>SafeCrime_Rating__c</fullName>
    <label>Safe/Crime Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>