force-app/main/default/objects/IndianRealEstateRecords__c/fields/School_District__c.field-meta.xml
<CustomField>
    <fullName>School_District__c</fullName>
    <label>School District</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>