force-app/main/default/objects/IndianRealEstateRecords__c/fields/Walkability_Score_1_100__c.field-meta.xml
<CustomField>
    <fullName>Walkability_Score_1_100__c</fullName>
    <label>Walkability Score (1-100)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>