force-app/main/default/objects/IndianRealEstateRecords__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>ZIPPostal_Code__c</columns>
    <columns>Country__c</columns>
    <columns>School_District__c</columns>
    <columns>Average_Home_Price_in_India_INR__c</columns>
    <columns>SafeCrime_Rating__c</columns>
    <columns>Walkability_Score_1_100__c</columns>
    <columns>Public_Transport_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>